--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,18 +1,11 @@
 @use 'reset';
 @use 'vars';
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,700;1,100&display=swap');
+
+
 body {
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
+  background-color: vars.$dark-blue;
+  margin: 2em;
 }
-
-/* 
-  // or you can import your own font
-  @font-face {
-    font-family: 'Roboto';
-    src: url('../assets/fonts/Roboto-Regular.ttf');
-  }
-
-  body {
-    font-family: 'Roboto', sans-serif;
-  }
-*/
