static front page done

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,8 +1,9 @@
 // == color variables
 $dark-blue: #080c24;
 $cream-white: #FCDAB7;
-$light-text: #FEFBE7;
+$light-text: #FBF8F1;
 
+// == logo color variables
 $pink: #f90085;
 $purple: #5800cc;
 
