--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -9,6 +9,9 @@
         width: 100%;
         display: flex;
         align-items: center;
+        @media (min-width: 600px) {
+            justify-content: center;
+        }
     }
 
     &-logo {
@@ -24,11 +27,16 @@
     }
    
     &-presentation {
-        font-size: 0.9em;
+        font-size: 1em;
         text-align: center;
-        max-width: 50%;
+        max-width: 80%;
         margin: 2em auto 0;
         line-height: 1.5em;
         font-weight: 100;
+        @media (min-width: 600px) {
+            font-size: 1.5em;
+            max-width: 50%;
+            margin: 2em auto 0;
+        }
     }
 }
