--- a/src/components/Welcome/welcome.scss
+++ b/src/components/Welcome/welcome.scss
@@ -2,15 +2,29 @@
 
 .main {
     color: vars.$light-text;
-    margin-top: 4em;
     letter-spacing: 0.05em;
-
+    
+    &-presentation {
+        font-size: 1em;
+        text-align: center;
+        max-width: 80%;
+        margin: 2em auto;
+        line-height: 1.5em;
+        font-weight: 100;
+        @media (min-width: 600px) {
+            font-size: 1.5em;
+            max-width: 50%;
+            margin: 2em auto 0;
+        }
+    }
+    
     &-welcome {
         text-align: center;
         font-size: 3em;
         font-weight: 100;
         display: flex;
         flex-direction: column;
+        margin-top: 1em;
     
         &__name {
             font-weight: 400;
