--- a/src/components/TodoPage/todopage.scss
+++ b/src/components/TodoPage/todopage.scss
@@ -1,7 +1,7 @@
 @use 'src/styles/vars';
 
 .todo-page {
-    margin:2em;
+    margin:2em 2em;
     height: 100%;
     overflow-y: scroll;
     scrollbar-width: none;
