--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -6,4 +6,8 @@ $light-text: #FBF8F1;
 $pink: #f90085;
 $purple: #5800cc;
 
+$green: #00ff22;
+$blue: #002fff;
+
 $gradient: linear-gradient(90deg, $pink 0%, $purple 100%);
+$gradientBottom: linear-gradient(to bottom, $pink 0%, $purple 100%);
